# mcp-desktop-controller

./: .gitignore  README.md  build_app.sh  pyproject.toml  server.py
